package com.galaxybank.model;

public enum AccountType {

    SAVING, CURRENT;
}
